--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,13 @@
-# Editor configuration, see https://editorconfig.org
+# Editor configuration, see http://editorconfig.org
 root = true
 
 [*]
-max_line_length = 150
+max_line_length = 140
 charset = utf-8
 indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.ts]
 quote_type = single
 
 [*.md]
