--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jasmine-marbles": "^0.9.2",
+    "jasmine-mock-factory": "^3.0.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
